# cpp_modules

./: .gitignore  CMakeLists.txt  README.md  main.cpp
import_std_example/: CMakeLists.txt  README.md  main.cpp  uses_std.cpp
module/: module.cppm
modules/: CMakeLists.txt  module.cppm  partition.cppm  template.cppm  template_partition.cppm
usual_examples/: main.cpp
usual_examples/modules/: CMakeLists.txt  template.cppm  template_partition.cppm
